feat: make force create user configurable via ui for magic link continuation flow